# S3DataPerimeterGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  buildspec.yml  pyproject.toml  requirements.txt
.exception-requests/: example-exception.json
.github/workflows/: policy-ci.yml
docs/: DEMO.md  README.md  diagrams.mmd
iac/cdk/: cdk.json  package-lock.json  package.json  package.json.bak2  tsconfig.json
iac/cdk/lib/: data-perimeter-stack.ts  data-perimeter-stack.ts.bak2  data-perimeter-stack.ts.bak3  data-perimeter-stack.ts.bak4
iac/terraform/: main.tf  main.tf.bak2  outputs.tf  variables.tf
pipeline/: buildspec.yml  buildspec.yml.bak2  cdk-pipeline.yaml  cdk-pipeline.yaml.bak2
policies/: bucket-policy.base.json  bucket-policy.base.json.bak  bucket-policy.exceptions.json  bucket-policy.exceptions.json.bak  scp-deny-external.json  scp-deny-external.json.bak  scp-restrict-s3-actions.json  scp-restrict-s3-actions.json.bak
scripts/: cross_account_tests.sh
tests/: test_bucket_policy.py.bak2  test_policy_enforcement.py  test_scp_policies.py
tests/fixtures/: sample-requests.json
tools/: generate_diagram.py  generate_diagram.py.bak3  generate_diagram.py.bak4  generate_diagram.py.bak5  merge_policy.py  merge_policy.py.bak2  merge_policy.py.bak3  validate_policy.py  validate_policy.py.bak  validate_policy.py.bak2  validate_policy.py.bak3
