[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-data-perimeter-guard"
version = "0.1.0"
description = "Monorepo for enforcing an S3 data perimeter with CDK, tooling, and pipelines"
authors = [{ name = "Data Perimeter Working Group" }]
requires-python = ">=3.11"
dependencies = [
    "jsonschema==4.21.1",
]

[project.optional-dependencies]
development = [
    "pytest==8.2.1",
]

[project.scripts]
merge-policy = "tools.merge_policy:main"
validate-policy = "tools.validate_policy:main"
generate-diagram = "tools.generate_diagram:main"

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-q"
